--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <title>Flappy Bird</title>
+    <title>Flappy Bird Clone by MW</title>
     <meta charset="utf-8">
+    <script src="phaser.min.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
+    <h1>Flappy Bird Clone by MW</h1>
 </body>
 
 </html>
