--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <title> Flappy Bird Clone </title>
+        <script type="text/javascript" src="phaser.min.js"></script>
+        <script type="text/javascript" src="main.js"></script>
+    </head>
 
-<head>
-    <title>Flappy Bird Clone by MW</title>
-    <meta charset="utf-8">
-    <script src="phaser.min.js" type="text/javascript"></script>
-    <script src="main.js" type="text/javascript"></script>
-</head>
+    <body>
 
-<body>
-    <h1>Flappy Bird Clone by MW</h1>
-</body>
-
-</html>
+    </body>
+</html> 
