--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Flappy Bird Clone </title>
+        <title> Flappy Clone by MW </title>
         <script type="text/javascript" src="phaser.min.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
 
     <body>
-            <h1>Flappy Bird Clone by M. Wolf</h1>
+            <h1>Help Superman avoid the Kryptonite!</h1>
     </body>
-</html> 
+</html>
