--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
         <script type="text/javascript" src="phaser.min.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
-
+    <style>
+      body {
+        padding-left: 15%;
+        padding-right: 15%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+    </style>
     <body>
             <h1>Help Superman avoid the Kryptonite!</h1>
     </body>
