--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title> Flappy Clone by MW </title>
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
         <script type="text/javascript" src="phaser.min.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
@@ -13,6 +14,9 @@
         margin-left: auto;
         margin-right: auto;
         text-align: center;
+        font-family: 'Press Start 2P', cursive;
+        color: white;
+        background-color: #0b1852;
       }
     </style>
     <body>
